update:mobile optimization

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
 
 .left-side-img {
-  background-image: linear-gradient(208.37deg, rgba(0, 0, 0, 0) -24.58%, #000000 116.89%), url('/auth-left.webp');
+  background-image: linear-gradient(208.37deg, rgba(0, 0, 0, 0) -24.58%, #000000 116.89%), url('/login1.jpeg');
   height: 100%;
   width: 100%;
   background-position: center;
