--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,9 @@ input:focus{
   outline:1px solid #0A8A33;
 }
 
+.my-divider{
+  border-bottom:1px solid  #F2F2F2;
+}
 
 
 *::-webkit-scrollbar {
@@ -164,4 +167,30 @@ font-weight: 600 !important;
   width: 45px !important;
   height: 50px !important;
   }
+}
+
+
+
+/* Swiper Style */
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
