--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 body{
   background-color: #F7F7F7;
   overflow: auto; /* Allow scrolling */
-  touch-action: auto; /* Allow default touch behaviors like scrolling */
+  touch-action: auto; /* Allow default touch behaviors like scrolling */  
 }
 
 html {
@@ -187,6 +187,9 @@ font-weight: 600 !important;
   }
   *{
     font-size: 16px !important;
+  }
+  body{
+    overflow: hidden;
   }
 }
 
